--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,29 +2,31 @@
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
+ *
+ * Docusarus has a nice color editor: https://docusaurus.io/docs/styling-layout
  */
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #cb1fba;
+  --ifm-color-primary-dark: #b71ca7;
+  --ifm-color-primary-darker: #ad1a9e;
+  --ifm-color-primary-darkest: #8e1682;
+  --ifm-color-primary-light: #de24cb;
+  --ifm-color-primary-lighter: #df2ece;
+  --ifm-color-primary-lightest: #e44cd5;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #e67aeb;
+  --ifm-color-primary-dark: #e05be6;
+  --ifm-color-primary-darker: #dd4be4;
+  --ifm-color-primary-darkest: #d121d9;
+  --ifm-color-primary-light: #ec99f0;
+  --ifm-color-primary-lighter: #efa9f2;
+  --ifm-color-primary-lightest: #f8d7f9;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
