--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,6 +8,11 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  background: linear-gradient(90deg,rgb(255, 181, 32) 0%,rgb(204, 31, 175) 100%);
+}
+
+[data-theme='dark'] .heroBanner {
+  background: linear-gradient(90deg,rgb(255, 207, 111) 0%,rgb(254, 110, 230) 100%);
 }
 
 @media screen and (max-width: 996px) {
