Reformat all docs

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,25 +4,33 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-  background: linear-gradient(90deg,rgb(255, 181, 32) 0%,rgb(204, 31, 175) 100%);
+    padding: 4rem 0;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    background: linear-gradient(
+        90deg,
+        rgb(255, 181, 32) 0%,
+        rgb(204, 31, 175) 100%
+    );
 }
 
 [data-theme='dark'] .heroBanner {
-  background: linear-gradient(90deg,rgb(255, 207, 111) 0%,rgb(254, 110, 230) 100%);
+    background: linear-gradient(
+        90deg,
+        rgb(255, 207, 111) 0%,
+        rgb(254, 110, 230) 100%
+    );
 }
 
 @media screen and (max-width: 996px) {
-  .heroBanner {
-    padding: 2rem;
-  }
+    .heroBanner {
+        padding: 2rem;
+    }
 }
 
 .buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
