--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,86 +18,87 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 ---
 
 <Layout>
-  <Header />
-  <main id="main-content">
-    <section id="hero">
-      <h1>Tech Guides</h1>
-      <a
-        target="_blank"
-        href="/rss.xml"
-        class="rss-link"
-        aria-label="rss feed"
-        title="RSS Feed"
-      >
-        <svg xmlns="http://www.w3.org/2000/svg" class="rss-icon"
-          ><path
-            d="M19 20.001C19 11.729 12.271 5 4 5v2c7.168 0 13 5.832 13 13.001h2z"
-          ></path><path
-            d="M12 20.001h2C14 14.486 9.514 10 4 10v2c4.411 0 8 3.589 8 8.001z"
-          ></path><circle cx="6" cy="18" r="2"></circle>
-        </svg>
-      </a>
+    <Header />
+    <main id="main-content">
+        <section id="hero">
+            <h1>Tech Guides</h1>
+            <a
+                target="_blank"
+                href="/rss.xml"
+                class="rss-link"
+                aria-label="rss feed"
+                title="RSS Feed"
+            >
+                <svg xmlns="http://www.w3.org/2000/svg" class="rss-icon"
+                    ><path
+                        d="M19 20.001C19 11.729 12.271 5 4 5v2c7.168 0 13 5.832 13 13.001h2z"
+                    ></path><path
+                        d="M12 20.001h2C14 14.486 9.514 10 4 10v2c4.411 0 8 3.589 8 8.001z"
+                    ></path><circle cx="6" cy="18" r="2"></circle>
+                </svg>
+            </a>
 
-      <p>
-        HackUTD tech guides to help you bootstrap your next hackathon project.
-      </p>
-      {
-        // only display if at least one social link is enabled
-        socialCount > 0 && (
-          <div class="social-wrapper">
-            <div class="social-links">Social Links:</div>
-            <Socials />
-          </div>
-        )
-      }
-    </section>
+            <p>
+                HackUTD tech guides to help you bootstrap your next hackathon
+                project.
+            </p>
+            {
+                // only display if at least one social link is enabled
+                socialCount > 0 && (
+                    <div class="social-wrapper">
+                        <div class="social-links">Social Links:</div>
+                        <Socials />
+                    </div>
+                )
+            }
+        </section>
 
-    <Hr />
+        <Hr />
 
-    <section id="all-posts">
-      <ul>
-        {
-          sortedPosts.map(({ data }) => (
-            <Card
-              href={`/guides/${slugify(data)}`}
-              frontmatter={data}
-              secHeading={false}
-            />
-          ))
-        }
-      </ul>
-    </section>
-  </main>
+        <section id="all-posts">
+            <ul>
+                {
+                    sortedPosts.map(({ data }) => (
+                        <Card
+                            href={`/guides/${slugify(data)}`}
+                            frontmatter={data}
+                            secHeading={false}
+                        />
+                    ))
+                }
+            </ul>
+        </section>
+    </main>
 
-  <Footer />
+    <Footer />
 </Layout>
 
 <style>
-  /* ===== Hero Section ===== */
-  #hero {
-    @apply pb-6 pt-8;
-  }
-  #hero h1 {
-    @apply my-4 inline-block text-3xl font-bold sm:my-4 sm:text-5xl;
-  }
-  #hero .rss-link {
-    @apply mb-6;
-  }
-  #hero .rss-icon {
-    @apply mb-2 h-6 w-6 scale-110 fill-skin-accent sm:mb-3 sm:scale-125;
-  }
-  #hero p {
-    @apply my-2;
-  }
-  .social-wrapper {
-    @apply mt-4 flex flex-col sm:flex-row sm:items-center;
-  }
-  .social-links {
-    @apply mb-1 mr-2 whitespace-nowrap sm:mb-0;
-  }
+    /* ===== Hero Section ===== */
+    #hero {
+        @apply pb-6 pt-8;
+    }
+    #hero h1 {
+        @apply my-4 inline-block text-3xl font-bold sm:my-4 sm:text-5xl;
+    }
+    #hero .rss-link {
+        @apply mb-6;
+    }
+    #hero .rss-icon {
+        @apply mb-2 h-6 w-6 scale-110 fill-skin-accent sm:mb-3 sm:scale-125;
+    }
+    #hero p {
+        @apply my-2;
+    }
+    .social-wrapper {
+        @apply mt-4 flex flex-col sm:flex-row sm:items-center;
+    }
+    .social-links {
+        @apply mb-1 mr-2 whitespace-nowrap sm:mb-0;
+    }
 
-  /* ===== Featured & Recent Posts Sections ===== */
-  #all-posts {
-    @apply pb-6 pt-2;
-  }
+    /* ===== Featured & Recent Posts Sections ===== */
+    #all-posts {
+        @apply pb-6 pt-2;
+    }
 </style>
